updated jesse silva profile

--- a/jesse.html
+++ b/jesse.html
@@ -7,13 +7,14 @@
 
       </head>
 <body>
-<h1>Hello I am Jesse!</h1>
+<h1>HOLA YO SOY JESSE!</h1>
 <div class = "container">
-<p> I love to play video games</p>
-<p> I like to hang out with the kiddos </p>
-    <p> Technology is my weakness, I love gadgets especially ones i can't afford</p>
+<p> I enjoy a strong power ballad</p>
+<p> There's nothing like coming home to a Full House </p>
+    <p>CASH IS KING</p>
 
 </div>
-<img src="https://dm2302files.storage.live.com/y4p_QIhaeBGH-2C_F6vmPg6oHHhU4MIOUv2UBX5YsFyv_X9Xiaz4g-FnfchUegFaGawcUW4JuMUYMHMjKS8a3ttzS8SpV1OO0-8zEGhHnsZ0jRBZIyqbtKy5BhJ-gZcbmptWmsk29BxQtOMasVX54Du-aICPgQt9cDLJyEL556i9Cz2wPaewK5pYhTD1pz78Uq-/2013-01-12%2015.52.25.jpg?psid=1&width=358&height=202"
+<img src="jesse.jpeg">
+   <img src="cashmoney.jpeg">
 </body>
 
